# zclipboard

./: .gitignore  README.md  pyproject.toml
examples/: README.md  __init__.py  basic_text.py  clipboard_data_usage.py  clipboard_monitor.py  custom_backend.py  html_clipboard.py  image_clipboard.py  rtf_clipboard.py
tests/: __init__.py  conftest.py  test_backend_base.py  test_backend_linux.py  test_backend_macos.py  test_backend_windows.py  test_clipboard.py  test_data_types.py  test_exceptions.py  test_integration.py  test_platform.py
xclipboard/: __init__.py  clipboard.py  data_types.py  exceptions.py  py.typed
xclipboard/backends/: __init__.py  base.py  linux.py  macos.py  windows.py
zclipboard/: __init__.py
