[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=61.0", "wheel"]

[project]
name = "zclipboard"
version = "1.0.1"
description = "Cross-platform clipboard manipulation module for Python"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Vũ Khánh Duy", email = "khanhduy101@gmail.com"}
]
keywords = ["clipboard", "cross-platform", "windows", "macos", "linux", "copy", "paste"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Desktop Environment",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.8"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]
image = [
    "Pillow>=9.0",
]
macos = [
    "pyobjc-framework-Cocoa>=9.0",
]

[project.urls]
Homepage = "https://github.com/mrgoldengun/zclipboard"
Repository = "https://github.com/mrgoldengun/zclipboard"
Documentation = "https://github.com/mrgoldengun/zclipboard#readme"

[tool.setuptools.packages.find]
where = ["."]
include = ["zclipboard*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
markers = [
    "integration: marks tests as integration tests (may require platform dependencies)",
    "slow: marks tests as slow running",
]

[tool.coverage.run]
source = ["zclipboard"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
